# rust_os

./: .gitignore  Cargo.toml
src/: main.rs  vga_buffer.rs
