[package]
name = "rust_os"
version = "0.1.0"
authors = ["j3elam <j3elam@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = "0.4.0" # deps in here are ^ by default
volatile = "0.2.3"   # 
[package.metadata.bootimage]
default-target = "x86_64-rust_os.json"

# Disable stack unwinding on panic, instant abort, spec moved to x86_64-rust_os.json
# [profile.dev] 
# panic = "abort"
# [profile.release]
# panic = "abort"